<resources>
    <string name="app_name">simpleKasir</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="total_harga">Total Harga</string>
    <string name="simpan">Simpan</string>
    <string name="keranjang">Keranjang</string>
    <string name="keluar">Keluar</string>
    <string name="input_nama">Input Nama</string>
    <string name="kembali">Kembali</string>
    <string name="barang">barang</string>
    <string name="jumlah">Jumlah</string>
    <string name="total">Total</string>
    <string name="buah">buah</string>
    <string name="totalview">total</string>
    <string name="total_bayar">Total Bayar:</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="kembalian">Kembalian</string>
    <string name="bayar">Bayar</string>
    <string name="harga_satuan">Harga Satuan</string>
    <string name="hapus">hapus</string>
    <string name="bersihkan">Bersihkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
</resources>