<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/background"
    tools:context=".ViewBarangActivity" >

    <TextView
        android:id="@+id/nama"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/nama_barang" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:text="@string/nama_barang" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/jumlah_barang" />

    <TextView
        android:id="@+id/jumlah"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nama"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/jumlah_barang" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/harga_satuan" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="510dp"
        android:text="@string/total_harga" />

    <TextView
        android:id="@+id/harga"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jumlah"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/harga_satuan" />

    <TextView
        android:id="@+id/total"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/harga"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="512dp"
        android:layout_toEndOf="@+id/textView6"
        android:text="@string/total_harga" />

    <Button
        android:id="@+id/kembali"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="330dp"
        android:text="@string/kembali"
        android:background="@drawable/bg_button"/>
</RelativeLayout>