<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.murphy.simplekasir.UpdateActivity" >

    <!-- Nama Barang -->
    <TextView
        android:id="@+id/textbarang"
        android:layout_width="117dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="254dp"
        android:labelFor="@+id/barang"
        android:text="@string/nama_barang"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="nama barang"
        android:enabled="false"
        android:inputType="text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

<!--    Jumlah Barang -->
    <TextView
        android:id="@+id/textjmlbarang"
        android:layout_width="123dp"
        android:layout_height="33dp"
        android:layout_below="@+id/textharga"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="248dp"
        android:labelFor="@+id/jmlbarang"
        android:text="@string/jumlah_barang"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textharga"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@id/jmlbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/harga"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="453dp"
        android:autofillHints="Jumlah Barang"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/barang"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />
    <!-- Harga Barang -->
    <TextView
        android:id="@+id/textharga"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_below="@+id/textbarang"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="251dp"
        android:labelFor="@+id/harga"
        android:text="@string/harga_barang"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textbarang"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barang"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Harga Barang"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/jmlbarang"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnsimpan"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/bg_button"
        android:text="@string/simpan"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnkembali"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="424dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/bg_button"
        android:text="@string/kembali"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>